--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: var(--color-black);  
+    background: rgb(12, 12, 12);  
     
     padding: 1rem 2rem;
     position: fixed;
